--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest
+        pip install -e .
+        pip install pytest pytest-cov
     
     - name: Run tests
       run: |
-        pytest tests/
+        pytest tests/ --cov=src
     
     - name: Upload coverage reports
       uses: codecov/codecov-action@v2
