--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: Python CI
 
 on:
   push:
@@ -14,20 +14,17 @@ jobs:
         python-version: [3.11]
 
     steps:
-    - uses: actions/checkout@v2
-    
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
         pip install pytest pytest-cov
-    
-    - name: Run tests
+        pip install -e .
+    - name: Test with pytest
       run: |
         pytest tests/ --cov=src
     
